fix gap

--- a/assets/main.css
+++ b/assets/main.css
@@ -623,14 +623,6 @@ video {
   left: -0.25rem;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
 .isolate {
   isolation: isolate;
 }
@@ -641,10 +633,6 @@ video {
 
 .z-\[4\] {
   z-index: 4;
-}
-
-.z-\[1\] {
-  z-index: 1;
 }
 
 .float-right {
@@ -820,10 +808,6 @@ video {
   width: 50%;
 }
 
-.w-\[100\%\] {
-  width: 100%;
-}
-
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -858,12 +842,6 @@ video {
 
 .translate-x-\[100\%\] {
   --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-\[1\.1\] {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1356,6 +1334,10 @@ video {
        column-gap: 5px;
 }
 
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1685,10 +1667,6 @@ video {
   border-bottom-left-radius: 0.25rem;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1748,11 +1726,6 @@ video {
   border-style: none;
 }
 
-.border-rose-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(159 18 57 / var(--tw-border-opacity));
-}
-
 .bg-main {
   --tw-bg-opacity: 1;
   background-color: hsl(240 78% 98% / var(--tw-bg-opacity));
@@ -1774,10 +1747,6 @@ video {
 
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.bg-\[url\(\'\/assets\/images\/bg-bottom\.svg\'\)\] {
-  background-image: url('/assets/images/bg-bottom.svg');
 }
 
 .from-gradient-check1 {
@@ -1841,10 +1810,6 @@ video {
 
 .bg-right-top {
   background-position: right top;
-}
-
-.bg-left-bottom {
-  background-position: left bottom;
 }
 
 .bg-repeat {
@@ -2524,12 +2489,6 @@ video {
 }
 
 @media (min-width: 480px) {
-  .xs\:scale-\[1\] {
-    --tw-scale-x: 1;
-    --tw-scale-y: 1;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .xs\:grid-cols-\[400px\] {
     grid-template-columns: 400px;
   }
@@ -2584,10 +2543,6 @@ video {
     }
   }
 
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .sm\:underline {
     text-decoration-line: underline;
   }
@@ -2606,6 +2561,10 @@ video {
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:gap-y-0 {
+    row-gap: 0px;
   }
 }
 
